--- a/sass/page/global/_html__embed.scss
+++ b/sass/page/global/_html__embed.scss
@@ -3,16 +3,19 @@
 
 /* ============================================================================
    Embed content
-============================================================================ */
+============================================================================= */
 
 img {
 	font-size: 1em;
 	color: $baseColor;
 	// alt text style
-	border: none;
-	// remove border if in <a> elem
 	-ms-interpolation-mode: bicubic;
 	// improve IE7's resizing of images http://code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
+
+	a & {
+		border: none;
+		// remove border if in <a> elem
+	}
 }
 
 //@media #{$media-tablet_small} {
