CHANGED: sass file structure for better work with WebStorm. Minor changes

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -10,7 +10,7 @@
 	margin: -1px;
 	overflow: hidden;
 	padding: 0;
-	position: absolute !important;;
+	position: absolute !important;
 	width: 1px;
 
 	.ie6-7 & {
