--- a/sass/blocks/_btn.scss
+++ b/sass/blocks/_btn.scss
@@ -1,5 +1,5 @@
 @import "weiss-config";
-@import "helpers/mixins";
+@import "mixins";
 
 /* ============================================================================
    Compose 3 element button
