--- a/sass/blocks/_modal.scss
+++ b/sass/blocks/_modal.scss
@@ -1,5 +1,5 @@
 @import "weiss-config";
-@import "helpers/mixins";
+@import "mixins";
 
 /* ============================================================================
    @group Modal block
