CHANGED: sass file structure. ADDED: img/sprite helpers

--- a/sass/_layout__seo-friendly-columns.scss
+++ b/sass/_layout__seo-friendly-columns.scss
@@ -1,5 +1,5 @@
-@import "weiss-config";
-@import "mixins";
+@import "weiss__config";
+@import "weiss__mixins";
 
 /* ============================================================================
 		@group layout: seo-friendly-columns
