--- a/sass/_weiss__mixins.scss
+++ b/sass/_weiss__mixins.scss
@@ -50,6 +50,32 @@ $prefix_defaults: -moz- -webkit- '' !default;
 }
 
 //============================================================================
+//   Images and Lemonade-Sprite helpers
+//============================================================================
+
+// sized sprites
+@mixin image-size($path){
+	width: image-width($path);
+	height: image-height($path);
+}
+
+@mixin sized-sprite($map, $sprite){
+	background: sprite($map, $sprite) no-repeat;
+	@include image-size(sprite-file($map, $sprite));
+}
+
+//shortcut
+@mixin s($map, $sprite){
+	background: sprite($map, $sprite) no-repeat;
+	@include image-size(sprite-file($map, $sprite));
+}
+
+//only image, when dimensions are useless
+@mixin si($map, $sprite){
+	background: sprite($map, $sprite) no-repeat;
+}
+
+//============================================================================
 //   HIDPI display alternatives
 //============================================================================
 
