--- a/sass/_includes__a.scss
+++ b/sass/_includes__a.scss
@@ -6,20 +6,7 @@
 ============================================================================= */
 
 .i-clfx {
-
-	&:before,
-	&:after {
-		content: "";
-		display: table;
-	}
-
-	&:after {
-		clear: both;
-	}
-
-	.ie6-7 & {
-		zoom: 1;
-	}
+	@include i-clfx;
 }
 
 /* position support */
@@ -53,27 +40,12 @@
 .i-dib {
 	// additional classes for overwrite IE make trouble in @extend funct
 	display: inline-block;
-	vertical-align: top;
 	*display: inline;
 	*zoom: 1;
 }
 
-.i-ir {
-	border: none;
-	font: 0/0 a;
-	text-shadow: none;
-	color: transparent;
-	background-color: transparent;
-}
-
 .i-wai {
 	@include i-hide_vis;
-}
-
-.i-op {
-	opacity: .85;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity = 85)";
-	filter: alpha(opacity = 85);
 }
 
 .i-img-container {
