--- a/sass/_parts__main.scss
+++ b/sass/_parts__main.scss
@@ -5,15 +5,21 @@
 		Main
 ============================================================================= */
 
-.breadcrumb {
+/* @group breadcrumb
+  --------------------------------------------------------------------------- */
 
-	ol {
-		margin: 0;
-		padding: 0;
-		list-style: none;
-	}
+.breadcrumb {}
 
-	li {
-		display: inline;
-	}
+.breadcrumb__inner {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
+
+.breadcrumb__item {
+	display: inline;
+}
+
+.breadcrumb__ln {}
+
+/* @end */
